--- a/store1.html
+++ b/store1.html
@@ -1,150 +1,14 @@
-{% extends "adminPart/adminBase.html" %}
-{% block title %}Admin ManageCourse{% endblock %}
-{% block content %}
-<div class="menu-section">
-    <h2>Manage Course</h2>
-    <form id="uploadCourseForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
-        <h3>Choose Either 'Upload' or 'Manual' to Insert New Course</h3>
-        <lable>No errors encountered so far</lable><br>
-        <label>Done with the validation of the input with not allow similar of course code and section</label>
-        <div class="profile-frame">
-            <div class="form-left">
-                <h4 style="text-align: center;">File Upload Section</h4>
-                <label for="course_list">
-                    <div class="upload-container" id="courseUploadContainer">
-                        <div class="upload-text">
-                            Upload a file with an empty first row. Data should start from columns A to D,<br> 
-                            labeled as: 'Code', 'Section', 'Name', and 'CreditHour'<br><br><br>
-                            Click to upload or drag and drop with below file format
-                        </div>
-                        <div class="file-types">XLSX, XLS, or XLSM</div><br>
-                        <!-- Selected file display -->
-                        <div id="courseSelectedFileName" class="file-name-display"></div>
-                    </div>
-                </label>
-                <input type="file" id="course_list" name="course_file" accept=".xlsx,.xls,.xlsm" style="display: none;">
-            </div>
+'''
+@app.route('/admin/manageTimetable', methods=['GET', 'POST'])
+def admin_manageTimetable():
+    user_data = User.query.all()
+    return render_template('admin/adminManageTimetable.html', active_tab='admin_manageTimetabletab', user_data=user_data)
+'''
 
-            <div class="form-right" style="width: 30%;">
-                <h4 style="text-align: center;">Manual Data Entry Section</h4>
-                <table class="enter-data-table">
-                    <tr style="text-align: center;">
-                        <th>Field</th>
-                        <th>Input</th>
-                    </tr>
-                    <tr>
-                        <td><label id="departmentLabel">Department</label></td>
-                        <td>
-                            <select name="courseDepartment">
-                                <option value="" disabled selected>Select Department</option>
-                                {% for dept in department_data %}
-                                    <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
-                                        ({{ dept.departmentCode }}) {{ dept.departmentName }}
-                                    </option>
-                                {% endfor %}
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Course Code</td>
-                        <td><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Course Section</td>
-                        <td><input type="text" name="courseSection" value="{{ courseSection_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Course Name</td>
-                        <td><input type="text" name="courseName" value="{{ courseName_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Course Credit Hours</td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Practical Lecturer</td>
-                        <td><input type="text" name="coursePractical" value="{{ coursePractical_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Tutorial Lecturer</td>
-                        <td><input type="number" name="courseTutorial" value="{{ courseTutorial_text }}"></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-        <br>
-
-        <!-- Result feedback -->
-        <div id="courseUploadResult" class="result-message"></div>
-        <div id="courseUploadErrors" class="error-message"></div>
-
-
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
-                </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-        <br>
-
-        <div class="button-wrapper">
-                <button type="submit">Upload/Add New Course</button>
-        </div>
-    </form>
-
-    
-        
-
-
-
-
-    <br><br>
-    <h3>Table Record</h3>
-    <!--<label>
-        Alert<br>
-        1. ID as the PK<br>
-        2. All able to edit<br>
-        3. With a dropdown by category frame<br>
-        4. Add 'add and edit button'<br>
-        Question<br>
-        1. Does ExamDay is manually insert or need to use ExamDate to determine the day<br>
-        2. Can ExamDay and ExamDate combine by "row.examDate" "row.examDay"<br>
-        3. Can StartTime and EndTime combine by "row.examStartTime" - "row.examEndTime"
-    </label>-->
-
-    <div class="user-table-container">
-        <table class="user-data-table">
-            <thead>
-                <tr>
-                    <th>No</th>
-                    <th>Course Code</th>
-                    <th>Course Section</th>
-                    <th>Course Name</th>
-                    <th>Credit Hour(s)</th>
-                    <th>Department</th>
-                    <th>Practical Lecturer</th>
-                    <th>Tutorial Lecturer</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in course_data %}
-                <tr>
-                    <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
-                    <!-- <td>{{ row.examID  }}</td> -->
-                    <td>{{ row.courseCode }}</td>
-                    <td>{{ row.courseSection }}</td>
-                    <td>{{ row.courseName }}</td>
-                    <td>{{ row.courseHour }}</td>
-                    <td>{{ row.courseDepartment }}</td>
-                    <td>{{ row.coursePractical }}</td>
-                    <td>{{ row.courseTutorial }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</div>
-{% endblock %}
+'''
+def get_drive_service():
+    SERVICE_ACCOUNT_FILE = '/home/WM05/xenon-chain-460911-p8-0931c798d991.json'
+    SCOPES = ['https://www.googleapis.com/auth/drive']
+    creds = Credentials.from_service_account_file(SERVICE_ACCOUNT_FILE, scopes=SCOPES)
+    return build('drive', 'v3', credentials=creds)
+'''
